perf(ticketing): fix N+1 query when loading comment attachments
Replace per-comment findByComment() lookup with a single
findByCommentIn() and group results in memory.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>